# DE_Assignment_2

./: .gitignore  pyproject.toml
Exercises/Exercise-1/: docker-compose.yml  main.py  requirements.txt
Exercises/Exercise-1/src/async_download/: fetch_files.py  pipeline.py  unzip_files.py
Exercises/Exercise-2/: Dockerfile  main.py  requirements.txt
Exercises/Exercise-2/src/: analytics.py  fetch.py  html_parsing.py
Exercises/Exercise-3/: Dockerfile  docker-compose.yml  main.py
Exercises/Exercise-3/src/: fetch.py
Exercises/Exercise-4/: main.py
Exercises/Exercise-4/src/: json_to_csv.py  search_json.py
Exercises/Exercise-5/: Dockerfile  ddl_script.sql  docker-compose.yml  ex.ipynb  main.py  try.ipynb
Exercises/Exercise-5/src/: connection.py  extract_and_clean.py  injest.py  schema.py
Exercises/Exercise-6/: main.py  report.ipynb
Exercises/Exercise-6/src/: analysis.py  clean.py  pipeline.py  unzip.py
